objects/BookAuthor__c.object
<CustomObject>
    <description>Many to Many Relationship between Book and Authors</description>
    <fields>
        <fullName>Author_Name__c</fullName>
        <formula>Author__r.First_Name__c +  &apos; &apos; + Author__r.Last_Name__c</formula>
        <label>Author Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>Captures the Author Name os the Book</description>
        <label>Author Id</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>BookAuthors</relationshipLabel>
        <relationshipName>BookAuthors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BookAuthorName__c</fullName>
        <description>To avoid duplicate entries of Book and Author combination</description>
        <label>BookAuthorId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Book_Name__c</fullName>
        <formula>Book__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <description>Name of the Books</description>
        <label>Book Id</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>BookAuthors</relationshipLabel>
        <relationshipName>BookAuthors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BookAuthor</label>
    <nameField>
        <displayFormat>BAN-{000000}</displayFormat>
        <label>BookAuthor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BookAuthors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>